Fixed styling for header so that collapses properly

--- a/ui/stylesheets/sections/_header.scss
+++ b/ui/stylesheets/sections/_header.scss
@@ -50,7 +50,7 @@ $logo-width: 110px;
         z-index: 10;
         position: absolute;
         width: 100%;
-        left: 0px;
+        left: 0;
         height: $header_height;
         line-height: $header_height;
         text-align: left;
